--- a/pom.xml
+++ b/pom.xml
@@ -222,7 +222,7 @@
     </dependency>
     <dependency>
       <groupId>com.typesafe.play</groupId>
-      <artifactId>routes-compiler_2.11</artifactId>
+      <artifactId>routes-compiler_${play2-scala.version}</artifactId>
       <version>${play.version}</version>
     </dependency>
     <dependency>
